Fixed CSS issues with story creator not showing up at all. HTML-safe'd the split page properly.

--- a/public/stylesheets/sass/styles.sass
+++ b/public/stylesheets/sass/styles.sass
@@ -152,7 +152,9 @@ body.fullscreen
 		min-height: 100%
 		padding: 0
 		#center
-			.insides
+			height: 100%
+			border: none
+			.center-insides
 				margin-top: 0
 				height: 100%
 				padding: 0
@@ -179,7 +181,7 @@ body.fullscreen
 		background-color: #f4f4f4
 		border: 1px solid #ccc
 		border-top: none
-		.insides
+		.center-insides
 			padding: 20px
 
 #footer
